Fix minor issues with connect in place styling and flow. - Remove 'Finishing up' message after successful authorization in favor of a status indicator inside the `iframe`. - Disable 'Set up Jetpack' button after click. - Remove 'Set up Jetpack' button's overrides introduced in `jetpack-connect` (green to blue). - Fix minor whitespace issues in `jetpack-connection-banner`.

--- a/scss/jetpack-connect.scss
+++ b/scss/jetpack-connect.scss
@@ -1,28 +1,46 @@
-// ==========================================================================
-// TOS Blurb
-// ==========================================================================
+@import '_inc/client/scss/variables/colors';
 
-.jp-jetpack-connect__tos-blurb {
-  font-size: .75rem;
-  margin-bottom: 2em;
-  text-align: left;
-
-  @media (min-width: 491px) {
-    text-align: center;
-  }
-}
-
-// ==========================================================================
+// =====================================================================
 // iFrame
 // ==========================================================================
 
 .jp-jetpack-connect__iframe {
-  height: 240px;
-  width: 380px;
-  max-width: 100%;
-  margin: 1rem auto 0;
+	height: 240px;
+	width: 380px;
+	max-width: 100%;
+	margin: 1rem auto 0;
 
-  @media (min-width: 491px) {
-    height: 290px;
-  }
+	@media (min-width: 491px) {
+		height: 290px;
+	}
+}
+
+// =====================================================================
+// Remove dops button override coming from jetpack-banner
+// ==========================================================================
+
+.jp-connect-full__button-container .dops-button.jp-connect-button.is-primary {
+	background: $blue-medium;
+	border-color: $blue-wordpress;
+	color: $white;
+
+	&:focus {
+		outline: 0;
+		border-color: $blue-medium;
+		box-shadow: 0 0 0 2px $blue-light;
+	}
+
+	&:hover,
+	&:focus {
+		background: $blue-medium;
+		border-color: $blue-dark;
+		color: $white;
+	}
+
+	&[disabled],
+	&:disabled {
+		background: tint( $blue-light, 50% );
+		border-color: tint( $blue-wordpress, 55% );
+		color: $white;
+	}
 }
